Fix table jumping when long text

--- a/src/admin/components/tabla/styles.css
+++ b/src/admin/components/tabla/styles.css
@@ -17,6 +17,14 @@ tr:last-child td {
   border-bottom: 0;
 }
 
+td div {
+  white-space: nowrap; 
+  width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
 th,
 td {
   margin: 0;
